<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    android:background="@drawable/shape">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textSize="27sp"
        android:gravity="center"/><TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createText"
        android:textColor="@color/colorGray"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="9dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fname"
        android:hint="@string/fnameText"
        android:textColor="@color/colorGray"
        android:textColorHint="@color/colorGray"
        android:textSize="18sp"
        android:layout_marginTop="45dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lname"
        android:hint="@string/lnameText"
        android:textColor="@color/colorGray"
        android:textColorHint="@color/colorGray"
        android:textSize="18sp"
        android:layout_marginTop="18dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:hint="@string/emailText"
        android:inputType="textWebEmailAddress"
        android:textColor="@color/colorGray"
        android:textColorHint="@color/colorGray"
        android:textSize="18sp"
        android:layout_marginTop="18dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="@string/passText"
        android:inputType="textWebPassword"
        android:textColor="@color/colorGray"
        android:textColorHint="@color/colorGray"
        android:textSize="18sp"
        android:layout_marginTop="18dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signIn"
        android:text="@string/SignInText"
        android:textColor="@color/colorGray"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginTop="90dp"/>

</LinearLayout>
